[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Extensions/DiamondTool/Tool/DiamondTool.gd" type="Script" id=1]
[ext_resource path="res://src/Tools/ShapeDrawer.tscn" type="PackedScene" id=2]

[node name="DiamondTool" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="ColorRect" parent="." index="0"]
margin_right = 124.0

[node name="Label" parent="." index="1"]
margin_right = 124.0

[node name="ThicknessSlider" parent="." index="2"]
margin_right = 124.0

[node name="FillCheckbox" parent="." index="3"]
margin_right = 124.0

[node name="Square" type="CheckBox" parent="." index="6"]
margin_top = 82.0
margin_right = 124.0
margin_bottom = 106.0
text = "Square Corners"

[node name="CenterMark" type="CheckBox" parent="." index="7"]
margin_top = 110.0
margin_right = 124.0
margin_bottom = 134.0
text = "Mark Centers"

[connection signal="toggled" from="Square" to="." method="_on_Square_toggled"]
[connection signal="toggled" from="CenterMark" to="." method="_on_CenterMark_toggled"]
